feat: BE - login API & get payments API this part
